--- a/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,12 @@
 ﻿@using PursueOfStaffAreaNetCore7.UI
 @using PursueOfStaffAreaNetCore7.UI.Models
+@using PursueOfStaffAreaNetCore7.BusinnessLayer.Concrete
+@using PursueOfStaffAreaNetCore7.BusinnessLayer.Abstract
+@using PursueOfStaffAreaNetCore7.BusinnessLayer.Mapping
+@using PursueOfStaffAreaNetCore7.EntityLayer.Entities
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.AllowType
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Staff
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Department
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Profession
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Duty
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
