--- a/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
@@ -9,4 +9,6 @@
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Department
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Profession
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Duty
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.EducationState
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Area
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
