--- a/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
@@ -180,6 +180,23 @@
                     </li>
                 </ul>
             </li><!-- End Duty Nav -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#area-nav" data-bs-toggle="collapse" href="#" title="Duty">
+                    <i class="fa-solid fa-location-pin me-2"></i><span>Area</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="area-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a asp-controller="Area" asp-action="List" title="List Areas">
+                            <i class="fa-solid fa-list me-2"></i><span>List Areas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="Area" asp-action="Add" title="Add Area">
+                            <i class="fa-solid fa-plus me-2"></i><span>Add Area</span>
+                        </a>
+                    </li>
+                </ul>
+            </li><!-- End Area Nav -->
 
             <li class="nav-heading">Account</li>
 
