--- a/PursueOfStaffAreaNetCore7.UI/Views/Staff/List.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Staff/List.cshtml
@@ -1,10 +1,115 @@
-﻿@{
-    ViewData["Title"] = "List Staff";
+﻿@model List<ListStaffViewModel>
+@{
+    ViewData["Title"] = "List Staffs";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <h1 class="display-3">@ViewData["Title"]</h1>
+<div class="row mb-3">
+    <div class="col">
+        <h1 class="display-6">@ViewData["Title"]</h1>
+        <hr />
     </div>
 </div>
+
+<div class="row mb-3">
+    <div class="col-md-12">
+        <a asp-action="Add" class="btn btn-primary btn-sm" title="New Staff"><i class="fa fa-plus me-2"></i>New Staff</a>
+    </div>
+</div>
+<div class="row mb-3">
+    <div class="col">
+        @if (Model.Count() == 0)
+        {
+            <div class="row mt-4">
+                <div class="col-md-12">
+                    <span class="alert alert-danger text-center">No data</span>
+                </div>
+            </div>
+        }
+        else
+        {
+            <table class="table table-hover table-sm">
+                <thead>
+                    <tr class="text-center">
+                        <th>Image</th>
+                        <th>TC</th>
+                        <th>FullName</th>
+                        <th>Department</th>
+                        <th>Profession</th>
+                        <th>Duty</th>
+                        <th>BornDate</th>
+                        <th>Phone</th>
+                        <th>StartDate</th>
+                        <th>Description</th>
+                        <th>IsStateWorking</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (ListStaffViewModel item in Model)
+                    {
+                        <tr class="text-center">
+                            <td>
+                                <img src="~/uploads/img/staffs/@item.ProfileImage" width="64"/>
+                            </td>
+                            <td>@item.TC</td>
+                            <td>@item.FullName</td>
+                            <td>@item.Department.Name</td>
+                            <td>@item.Profession.Name</td>
+                            <td>@item.Duty.Name</td>
+                            <td>@item.BornDate.ToShortDateString()</td>
+                            <td>@item.Phone</td>
+                            <td>@item.StartDate.ToShortDateString()</td>
+                            <td>@item.Description</td>
+                            <td class="text-center">
+                                @if (item.IsStateWorking)
+                                {
+                                    <i class="fa fa-check text-success"></i>
+                                }
+                                else
+                                {
+                                    <i class="fa fa-times text-danger"></i>
+                                }
+                            </td>
+                            <td class="text-end">
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm text-white" title="Edit"><i class="fa fa-edit me-2"></i>Edit</a>
+                                <a asp-action="Remove" asp-route-id="@item.Id"
+                           onclick="return confirm('Are you sure want to remove this staff : @item.FullName ?')" asp-route-id="@item.Id"
+                           class="btn btn-danger btn-sm" title="Remove"><i class="fa fa-trash me-2"></i>Remove</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </div>
+</div>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+@section scripts{
+    @if (TempData["resultStaff"] != null)
+    {
+        <script>
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "newestOnTop": false,
+                "progressBar": true,
+                "positionClass": "toast-top-right",
+                "preventDuplicates": false,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            }
+            toastr["success"]("@TempData["resultStaff"]", "Edit Staff");
+            toastr.options = null;
+        </script>
+    }
+
+}
+
 
