duty assign opreations is done

--- a/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                 </ul>
             </li><!-- End Duty Nav -->
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#area-nav" data-bs-toggle="collapse" href="#" title="Duty">
+                <a class="nav-link collapsed" data-bs-target="#area-nav" data-bs-toggle="collapse" href="#" title="Area">
                     <i class="fa-solid fa-location-pin me-2"></i><span>Area</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="area-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
@@ -197,6 +197,23 @@
                     </li>
                 </ul>
             </li><!-- End Area Nav -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#dutyassign-nav" data-bs-toggle="collapse" href="#" title="DutyAssign">
+                    <i class="fa-solid fa-bars-progress me-2"></i><span>DutyAssign</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="dutyassign-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a asp-controller="DutyAssign" asp-action="List" title="List DutyAssigns">
+                            <i class="fa-solid fa-list me-2"></i><span>List DutyAssigns</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="DutyAssign" asp-action="Add" title="Add DutyAssign">
+                            <i class="fa-solid fa-plus me-2"></i><span>Add DutyAssign</span>
+                        </a>
+                    </li>
+                </ul>
+            </li><!-- End DutyAssign Nav -->
 
             <li class="nav-heading">Account</li>
 
