--- a/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
@@ -11,4 +11,5 @@
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Duty
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.EducationState
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Area
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.DutyAssign
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
