--- a/PursueOfStaffAreaNetCore7.UI/Views/Area/Add.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Area/Add.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col-md-8 offset-2">
-        <form asp-action="Add" method="post" enctype="multipart/form-data">
+        <form asp-action="Add" method="post">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="All" class="text-danger small"></div>
                     <div class="form-group mb-3">
@@ -22,7 +22,7 @@
 
                     <div class="form-group mb-3">
                         <label asp-for="StaffId"></label>
-                @Html.DropDownList("StaffId",(List<SelectListItem>) ViewBag.Staffs, "Choose", new { @class = "dropdown form-control pull-right" })
+                @Html.DropDownListFor(m=>m.StaffId,(List<SelectListItem>) ViewBag.Staffs, "Choose", new { @class = "dropdown form-control pull-right" })
                     </div>
 
                     <div class="form-group mb-3">
