--- a/PursueOfStaffAreaNetCore7.UI/Views/Staff/Add.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Staff/Add.cshtml
@@ -31,27 +31,22 @@
                         <label asp-for="TC" class="form-label"></label>
                         <input asp-for="TC" class="form-control" placeholder="enter tc" />
                     </div>
-
                     <div class="form-group mb-3">
                         <label asp-for="FullName" class="form-label"></label>
                         <input asp-for="FullName" class="form-control" placeholder="enter fullname" />
                     </div>
-
                     <div class="form-group mb-3">
                         <label asp-for="BornDate" class="form-label"></label>
                         <input asp-for="BornDate" class="form-control" />
                     </div>
-
                     <div class="form-group mb-3">
                         <label asp-for="Phone" class="form-label"></label>
                         <input asp-for="Phone" class="form-control" placeholder="enter phone" />
                     </div>
-
                     <div class="form-group mb-3">
                         <label asp-for="StartDate" class="form-label"></label>
                         <input asp-for="StartDate" class="form-control" />
                     </div>
-
                     <div class="form-group mb-3">
                         <label asp-for="EducationStateId"></label>
                         @Html.DropDownList("EducationStateId",(IEnumerable<SelectListItem>) ViewBag.EducationStatus as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
@@ -68,12 +63,18 @@
                         <label asp-for="DutyId"></label>
                         @Html.DropDownList("DutyId",(IEnumerable<SelectListItem>) ViewBag.Duties as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
                     </div>
-
+                    <div class="form-group mb-3">
+                        <label asp-for="DegreeId"></label>
+                        @Html.DropDownList("DegreeId",(IEnumerable<SelectListItem>) ViewBag.Degrees as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="StaffStatuId"></label>
+                        @Html.DropDownList("StaffStatuId",(IEnumerable<SelectListItem>) ViewBag.StaffStatus as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
+                    </div>
                     <div class="form-group mb-3">
                         <label asp-for="Description" class="form-label"></label>
                         <textarea asp-for="Description" rows="6" cols="6" class="form-control" placeholder="enter description"> </textarea>
                     </div>
-
                     <div class="form-group mb-3">
                         <button type="submit" class="btn btn-success" title="Save"><i class="fa-solid fa-save me-2"></i>Save</button>
                         <a asp-action="List" class="btn btn-secondary" title="Back to List"><i class="fa-solid fa-angles-left me-2"></i>Back to List</a>
