--- a/PursueOfStaffAreaNetCore7.UI/Views/Staff/Edit.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Staff/Edit.cshtml
@@ -73,6 +73,14 @@
                         <label asp-for="DutyId"></label>
                         @Html.DropDownList("DutyId",(IEnumerable<SelectListItem>) ViewBag.Duties as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
                     </div>
+                                        <div class="form-group mb-3">
+                        <label asp-for="DegreeId"></label>
+                        @Html.DropDownList("DegreeId",(IEnumerable<SelectListItem>) ViewBag.Degrees as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="StaffStatuId"></label>
+                        @Html.DropDownList("StaffStatuId",(IEnumerable<SelectListItem>) ViewBag.StaffStatus as SelectList, "Choose", new { @class = "dropdown form-control pull-right" })
+                    </div>
                     <div class="form-group mb-3">
                         <label asp-for="Description" class="form-label"></label>
                         <textarea asp-for="Description" rows="6" cols="6" class="form-control" placeholder="enter description">@Model.Description </textarea>
