--- a/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
@@ -12,4 +12,8 @@
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.EducationState
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Area
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.DutyAssign
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Degree
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.StaffStatu
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Account
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Admin
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
