--- a/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -30,7 +31,7 @@
 
     <!-- Template Main CSS File -->
     <link href="~/web/assets/css/style.css" rel="stylesheet">
-<link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/css/validation-summary-errors.css" rel="stylesheet" />
 </head>
 
@@ -48,16 +49,18 @@
         </div><!-- End Logo -->
 
         <nav class="header-nav ms-auto">
+            @if (User.Identity.IsAuthenticated)
+            {
             <ul class="d-flex align-items-center">
                 <li class="nav-item dropdown pe-3">
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="~/web/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">welatbaran</span>
+                        <img src="~/uploads/img/staffs/user.png" alt="Profile" class="rounded-circle">
+                        <span class="d-none d-md-block dropdown-toggle ps-2">@User.FindFirst("Username").Value&nbsp;(@User.FindFirstValue(ClaimTypes.Role))</span>
                     </a><!-- End Profile Iamge Icon -->
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>Welat BARAN</h6>
-                            <span>Web Designer</span>
+                            <h6>@User.Identity.Name</h6>
+                            <span>@User.FindFirstValue(ClaimTypes.Actor)</span>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
@@ -73,7 +76,7 @@
                         </li>
                         <script src="~/toastr.js/toastr.min.js"></script>
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
+                                <a class="dropdown-item d-flex align-items-center" asp-controller="Account" asp-action="SignOut">
                                 <i class="bi bi-box-arrow-right"></i>
                                 <span>Sign Out</span>
                             </a>
@@ -81,6 +84,7 @@
                     </ul><!-- End Profile Dropdown Items -->
                 </li><!-- End Profile Nav -->
             </ul>
+            }
         </nav><!-- End Icons Navigation -->
     </header><!-- End Header -->
     <!-- ======= Sidebar ======= -->
@@ -88,6 +92,8 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
+            @if (User.Identity.IsAuthenticated)
+            {
             <li class="nav-item">
                 <a class="nav-link " asp-controller="Home" asp-action="Index" title="Dashboard">
                     <i class="bi bi-grid"></i>
@@ -107,7 +113,7 @@
                     </li>
                     <li>
                         <a asp-controller="Staff" asp-action="Add" title="Add Staff">
-                             <i class="fa-solid fa-plus me-2"></i><span>Add Staff</span>
+                            <i class="fa-solid fa-plus me-2"></i><span>Add Staff</span>
                         </a>
                     </li>
                 </ul>
@@ -119,16 +125,18 @@
                 <ul id="allowtype-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a asp-controller="AllowType" asp-action="List" title="List AllowTypes">
-                           <i class="fa-solid fa-list me-2"></i><span>List AllowTypes</span>
+                            <i class="fa-solid fa-list me-2"></i><span>List AllowTypes</span>
                         </a>
                     </li>
                     <li>
                         <a asp-controller="AllowType" asp-action="Add" title="Add AllowType">
-                             <i class="fa-solid fa-plus me-2"></i><span>Add AllowType</span>
+                            <i class="fa-solid fa-plus me-2"></i><span>Add AllowType</span>
                         </a>
                     </li>
                 </ul>
-           </li><!-- End AllowType Nav -->
+            </li><!-- End AllowType Nav -->
+            if (User.IsInRole("admin"))
+            {
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#department-nav" data-bs-toggle="collapse" href="#" title="Department">
                     <i class="fa-solid fa-building-user me-2"></i><span>Department</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -145,7 +153,10 @@
                         </a>
                     </li>
                 </ul>
-            </li><!-- End Department Nav -->
+            </li>
+
+            <!-- End Department Nav -->
+            }
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#profession-nav" data-bs-toggle="collapse" href="#" title="Profession">
                     <i class="fa-solid fa-school me-2"></i><span>Profession</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -262,26 +273,30 @@
                         </a>
                     </li>
                 </ul>
-            </li><!-- End Profile Page Nav -->
+                </li><!-- End Profile Page Nav -->
+                if (User.IsInRole("admin"))
+                {
+                    <li class="nav-heading">Admin</li>
 
-            <li class="nav-heading">Admin</li>
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#admin-nav" data-bs-toggle="collapse" href="#" title="Admin">
-                    <i class="fa-solid fa-screwdriver-wrench me-2"></i><span>Admin</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="admin-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a asp-controller="Admin" asp-action="ListUser" title="List Users">
-                            <i class="fa-solid fa-list me-2"></i><span>List Users</span>
+                    <li class="nav-item">
+                        <a class="nav-link collapsed" data-bs-target="#admin-nav" data-bs-toggle="collapse" href="#" title="Admin">
+                            <i class="fa-solid fa-screwdriver-wrench me-2"></i><span>Admin</span><i class="bi bi-chevron-down ms-auto"></i>
                         </a>
-                        <a asp-controller="Admin" asp-action="AddUser" title="AddUser">
-                            <i class="fa-solid fa-user-plus me-2"></i><span>Add User</span>
-                        </a>
+                        <ul id="admin-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                            <li>
+                                <a asp-controller="Admin" asp-action="ListUser" title="List Users">
+                                    <i class="fa-solid fa-list me-2"></i><span>List Users</span>
+                                </a>
+                                <a asp-controller="Admin" asp-action="AddUser" title="AddUser">
+                                    <i class="fa-solid fa-user-plus me-2"></i><span>Add User</span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
-                </ul>
-            </li><!-- End Profile Page Nav -->
 
+                    <!-- End Profile Page Nav -->
+                }
+            }
         </ul>
 
     </aside><!-- End Sidebar-->
@@ -289,7 +304,7 @@
     <main id="main" class="main">
 
         <section class="section dashboard">
-@RenderBody()
+            @RenderBody()
         </section>
 
     </main><!-- End #main -->
