Allow request operations is completed

--- a/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
+++ b/PursueOfStaffAreaNetCore7.UI/Views/_ViewImports.cshtml
@@ -16,4 +16,5 @@
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.StaffStatu
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Account
 @using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Admin
+@using PursueOfStaffAreaNetCore7.EntityLayer.ViewModels.Allow
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
